crates/test-files/fixtures/compile_errors/mismatch_return_type.fe
contract Foo {
    pub fn bar() -> address {
        return u256(1)
    }
}
